--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -8,39 +8,39 @@ default-lease-time 14400;
 max-lease-time 14400;
 
 subnet 192.168.22.0 netmask 255.255.255.0 {
- option routers                  192.168.22.1; # lan
+ option routers                  192.168.22.209; # lan
  option subnet-mask              255.255.255.0;
- option domain-name              "ocp.lan";
- option domain-name-servers       192.168.22.1;
- range 192.168.22.80 192.168.22.99;
+ option domain-name              "test.co.uk";
+ option domain-name-servers       192.168.22.209;
+ range 192.168.22.210 192.168.22.213;
 }
 
 host ocp-bootstrap {
- hardware ethernet 00:0c:29:83:df:be;
- fixed-address 192.168.22.200;
+ hardware ethernet 00:15:5d:2a:7d:34;
+ fixed-address 192.168.22.210;
 }
 
 host ocp-cp-1 {
- hardware ethernet 00:0c:29:65:d5:0f;
- fixed-address 192.168.22.201;
-}
-
-host ocp-cp-2 {
- hardware ethernet 00:0c:29:8e:91:c2;
- fixed-address 192.168.22.202;
-}
-
-host ocp-cp-3 {
- hardware ethernet 00:0c:29:4e:e6:77;
- fixed-address 192.168.22.203;
-}
-
-host ocp-w-1 {
- hardware ethernet 00:0c:29:da:35:11;
+ hardware ethernet 00:15:5d:2a:7d:2f;
  fixed-address 192.168.22.211;
 }
 
-host ocp-w-2 {
- hardware ethernet 00:0c:29:3d:ea:c4;
+host ocp-cp-2 {
+ hardware ethernet 00:15:5d:2a:7d:30;
  fixed-address 192.168.22.212;
+}
+
+host ocp-cp-3 {
+ hardware ethernet 00:15:5d:2a:7d:31;
+ fixed-address 192.168.22.213;
+}
+
+host ocp-w-1 {
+ hardware ethernet 00:15:5d:2a:7d:32;
+ fixed-address 192.168.22.214;
+}
+
+host ocp-w-2 {
+ hardware ethernet 00:15:5d:2a:7d:33;
+ fixed-address 192.168.22.215;
 }
