--- a/dns/named.conf
+++ b/dns/named.conf
@@ -10,7 +10,7 @@
 // configuration located in /usr/share/doc/bind-{version}/Bv9ARM.html
 
 options {
-	listen-on port 53 { 127.0.0.1; 192.168.22.1; };
+	listen-on port 53 { 127.0.0.1; 192.168.22.209; };
 #	listen-on-v6 port 53 { ::1; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
@@ -66,7 +66,7 @@ zone "." IN {
 
 zone "ocp.lan" {
     type master;
-    file "/etc/named/zones/db.ocp.lan"; # zone file path
+    file "/etc/named/zones/db.test.co.uk"; # zone file path
 };
 
 zone "22.168.192.in-addr.arpa" {
