domain name changed in zone

--- a/dns/named.conf
+++ b/dns/named.conf
@@ -64,7 +64,7 @@ zone "." IN {
 
 # Include ocp zones
 
-zone "ocp.lan" {
+zone "test.co.uk" {
     type master;
     file "/etc/named/zones/db.test.co.uk"; # zone file path
 };
